# eero-ui

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  commitlint.config.js  container-start.sh  docker-compose.yml  start.sh
.cursor/docs/: architecture.md
.cursor/tasks/: dashboard-implementation-plan.md
.github/: renovate.json5
.github/workflows/: auto-merge.yml  ci.yml  commitlint.yml  docker-publish.yml  metrics.yml  release.yml  renovate.yml  security.yml  sync-wiki.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py  transformers.py
backend/app/routes/: __init__.py  auth.py  devices.py  eeros.py  metrics.py  networks.py  profiles.py
backend/app/services/: __init__.py  victoria.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_security.py  test_transformers.py
frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/api/: client.ts  index.ts  metrics.ts  types.ts
frontend/src/lib/components/charts/: BandwidthChart.svelte  BarGauge.svelte  ClientCountChart.svelte  PieChart.svelte  SpeedtestChart.svelte  TimeSeriesChart.svelte
frontend/src/lib/components/common/: ConfirmDialog.svelte  StatusBadge.svelte  Toast.svelte
frontend/src/lib/components/device/: DeviceList.svelte  DeviceRow.svelte
frontend/src/lib/components/topology/: NetworkMap.svelte
frontend/src/lib/components/topology/nodes/: DeviceNode.svelte  EeroNode.svelte  GatewayNode.svelte
frontend/src/lib/stores/: auth.test.ts  auth.ts  devices.ts  index.ts  networks.ts  topology.ts  ui.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/devices/: +page.svelte
frontend/src/routes/devices/[id]/: +page.svelte
frontend/src/routes/eeros/: +page.svelte
frontend/src/routes/eeros/[id]/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/network/[id]/: +page.svelte
frontend/src/routes/profiles/: +page.svelte
frontend/src/routes/profiles/[id]/: +page.svelte
frontend/src/routes/topology/: +page.svelte
frontend/tests/: setup.ts
frontend/tests/mocks/: handlers.ts  server.ts
security-rules/: README.md  general-security.yaml  javascript-security.yaml  python-security.yaml
wiki/: API-Reference.md  Architecture.md  CI-CD.md  Configuration.md  Dependency-Updates.md  Development.md  Home.md  Installation.md  Roadmap.md  Security.md  Troubleshooting.md
